# pnguo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  njson.natvis  pkgvcpkg.json  vcpkg-configuration.json  vcpkg.json  vcpkg0.json
enc_temp_folder/1f8d8039b1361d11c492707c64661/: main_vk.cpp
enc_temp_folder/39edc1856fc543b990b2d571de2a066/: main_vcpkg.cpp
rc/: resource1.h  resource1.rc
src/: SH_600938.txt  ed.json  main.cpp
src/panguo/: CMakeLists.txt  buffer.cpp  mapView.h  pch1.h  pnguo.cpp  pnguo.h  testshader.cpp  vkrenderer.cpp
src/panguo/shaders/: base3d.frag.glsl  base3d.vert.glsl
src/pnguo/: CMakeLists.txt  app.cpp  app.h  audio.cpp  audio.h  backend_2d.cpp  backend_2d.h  buffer.cpp  buffer.h  ecc_sv.cpp  ecc_sv.h  editor_2d.cpp  editor_2d.h  font_core.cpp  font_core.h  gpu_vk.cpp  gpu_vk.h  gpu_vk_in.h  gui.cpp  gui.h  hex_editor.cpp  hex_editor.h  mapView.cpp  mapView.h  mesh3d.cpp  mesh3d.h  mnet.cpp  mnet.h  ntype.h  page.cpp  page.h  pch1.h  plot.cpp  plot.h  pnguo.cpp  pnguo.h  print_time.h  render.cpp  render.h  t3.h  (+16 more)
src/pnguo/shaders/: DownSamplePS.glsl  GLTFDepthPass-frag.glsl  GLTFDepthPass-vert.glsl  GLTFMotionVectorsPass-frag.glsl  GLTFMotionVectorsPass-vert.glsl  GLTFPbrPass-frag.glsl  GLTFPbrPass-vert.glsl  GLTFPbrPass0-frag.glsl  GLTFPbrPass1-frag.glsl  GLTFVertexFactory.glsl  GLTFVertexFactory.h  GLTF_VS2PS_IO.h  MagnifierPS.glsl  PBRTextures.h  SkyDome.glsl  SkyDome.hlsl  SkyDomeProc.glsl  SkyDomeProc.hlsl  TAA.glsl.h  TAA.hlsl  TAASharpenerCS.glsl.h  TAASharpenerCS.hlsl  agauss_cs.comp.glsl  agauss_cs.comp.glsl.h  agauss_cs.comp.h  base3d.frag.glsl  base3d.frag.h  base3d.vert.glsl  base3d.vert.h  base3d2.frag.h  base3d2.vert.glsl  base3d2.vert.h  base_compile.bat  oit_blendCS.glsl  pbr_frag_c.spv  pbr_pixel.h  pbr_px.h  pbr_px0.h  pbr_px_one.h  perFrameStruct.h  (+6 more)
src/vkgui/: CMakeLists.txt  event.h  mapView.cpp  mapView.h  mnet.cpp  mnet.h  njson.natvis  page.cpp  page.h  pch1.h  pnguo.cpp  pnguo.h  tinysdl3.cpp  tinysdl3.h  vkrenderer.cpp  vkrenderer.h  win_core.cpp  win_core.h
src/vkgui/shaders/: GLTFMotionVectorsPass-vert.glsl  GLTFPbrPass-vert.glsl  skinning.h
test_src/: CMakeLists.txt  charts.cpp  charts.h  cpuinfotest.json  ecc_sv.cpp  ecc_sv.h  logic_gates.cpp  logic_gates.h  main.cpp  main_hex.cpp  main_markdown.cpp  main_spr.cpp  main_testaudiio.cpp  main_tl.cpp  main_vcpkg.cpp  main_vg.cpp  main_vk.cpp  minesweeper.cpp  minesweeper.h  mshell.cpp  mshell.h  mw2.atlas  sh938.txt  win32msg.h  xh1.atlas  xh1.json
test_src/SDL3_ttf/src/: version.rc
third_lib/: SDL_render_vulkan.c
